<resources>
    <string name="app_name">Android Labs</string>
    <string name="Hello_World">Hello World</string>
    <string name="button">Button</string>

    <string name="login">login</string>
    <string name="login_name">login name</string>
    <string name="password">password</string>

    <string name="Checkbox">Checkbox</string>
    <string name="RadioButton">RadioButton</string>
    <string name="Switch">What does this do?</string>

    <string name="saved_email">null</string>
    <string name="saved_password">null</string>
    <string name="CB_dialog_message">End the activity?</string>
    <string name="CB_dialog_title">Warning</string>
    <string name="ok">Ok</string>
    <string name="cancel">Cancel</string>

    <string name="Start_Chat">Start Chat</string>
    <string name="Send_button">Send</string>
</resources>
