<?xml version="1.0" encoding="utf-8"?>
<GridLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:columnCount="2"
    android:rowCount="2"
    tools:context="com.example.jason.androidlabs.ListItemsActivity">

    <RadioButton
        android:hint="@string/RadioButton"
        android:layout_width="190dp"
        android:layout_column="0"
        android:layout_row="0"
        />

    <CheckBox
        android:id="@+id/finish_checkbox"
        android:hint="@string/Checkbox"
        android:layout_width="190dp"
        android:layout_column="1"
        android:layout_row="0" />

    <Switch
        android:id="@+id/on_off_switch"
        android:layout_width="190dp"
        android:layout_column="0"
        android:layout_row="1"
        android:hint="@string/Switch" />
    />

    <ImageButton
        android:id="@+id/camera_button"
        android:layout_width="190dp"
        android:layout_height="50dp"
        android:layout_column="1"
        android:layout_row="1"
        android:src="@android:drawable/ic_menu_camera" />
    />

</GridLayout>
